# Gen2-UHF-RFID-Reader

./: .dockerignore  .gitignore  Dockerfile  README.md  USRP_eth_connection.txt  benchmarking.sh  build.env  build_image.sh  configuration.env  install_dependencies.sh  measurements.sh  run.sh  trash:⁄.desktop
gr-rfid/: CMakeLists.txt
gr-rfid/apps/: CMakeLists.txt  reader.py
gr-rfid/docs/: CMakeLists.txt
gr-rfid/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-rfid/docs/doxygen/doxyxml/: base.py
gr-rfid/docs/doxygen/other/: doxypy.py
gr-rfid/grc/: CMakeLists.txt  rfid_gate.xml  rfid_global_vars.xml  rfid_reader.xml  rfid_tag_decoder.xml
gr-rfid/include/gnuradio/rfid/: CMakeLists.txt  gate.h  global_vars.h  reader.h  tag_decoder.h
gr-rfid/include/rfid/: global_vars.h
gr-rfid/lib/: CMakeLists.txt  gate_impl.cc  global_vars.cc  reader_impl.cc  tag_decoder_impl.cc
gr-rfid/misc/debug_data/: file_sink
gr-rfid/python/rfid/: CMakeLists.txt
gr-rfid/python/rfid/bindings/: CMakeLists.txt  gate_python.cc  python_bindings.cc  reader_python.cc  tag_decoder_python.cc
gr-rfid/python/rfid/bindings/docstrings/: gate_pydoc_template.h  reader_pydoc_template.h  tag_decoder_pydoc_template.h
matlab/: .simple_plot.m.kate-swp  FFT_signal_study.m  FFT_signal_study_2.m  auto_signal_phase.m  filter_test.m  manual_signal_phase.m  plot_decoder.m  plot_decoder_total.m  plot_fft_signal.m  plot_rn16_iq.m  plot_signal.m  plot_signal_external_filters.m  plot_signal_rn16_kmeans.m  simple_plot.m
matlab/post_processing/: decoder_analysis.m  signal_analysis.m
